cleanup: fix spotbugs warnings across all modules